wcserver/cpp/include/wcserver.h

//+ Group: Client SDK Functions

///////////////////////////////////////////////////////////////////////////
//! The functions to get the Wildcat version and build can be called before
//! WildcatServerConnect.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetWildcatVersion();
DWORD APIENTRY GetWildcatBuild();
///////////////////////////////////////////////////////////////////////////
//! 449.5 04/30/01
//! The functions to get the Wildcat version and build at the server and
//! can only be called after a context is created
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY WcGetServerVersion();
DWORD APIENTRY WcGetServerBuild();
////////////////////////////////////////////////////////////////////////////
//! WildcatServerConnect should be called once per application to connect to
//! the Wildcat server.  The window handle is used as the parent window when
//! the server connect dialog box is displayed.  If there is no convenient
//! window handle available, pass NULL.  Console mode applications should
//! also pass NULL.  WildcatServerConnectSpecific can be called if you know
//! the machine name of the server you would like to connect to.
//! WildcatServerDialog allows the user to pick a server from a dialog box.
//!
//! WildcatServerConnectLocal() was added in v5.7 to support connections
//! only to the local computer. Performs no broadcasting.
////////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY WildcatServerConnect(HWND parent);
BOOL  APIENTRY WildcatServerConnectSpecific(HWND parent, const char *computername);
BOOL  APIENTRY WildcatServerConnectLocal(HWND parent);
BOOL  APIENTRY WildcatServerDialog(HWND parent, char *computername, DWORD namesize);
BOOL  APIENTRY SetWildcatErrorMode(BOOL verbose);
// 450.9b2
BOOL  APIENTRY WildcatServerShutdown(const char *pwd, const BOOL force);
//

///////////////////////////////////////////////////////////////////////////
//! GetConnectedServer retrieves the computer name of the connected server
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetConnectedServer(char *computername, DWORD namesize);
///////////////////////////////////////////////////////////////////////////
//! These functions start and stop a thread-specific context for this client
//! on the server.  Even if an application only has one thread, the
//! WildcatServerCreateContext function must be called before any other
//! functions will work.
//!
//! WildcatServerCreateContextFromHandle creates a new client context that
//! refers to an existing context on the server.  The handle is generally
//! retrieved using GetWildcatServerContextHandle in one application, and
//! passed to WildcatServerCreateContextFromHandle in another application.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY WildcatServerCreateContext();
BOOL  APIENTRY WildcatServerCreateContextFromHandle(DWORD context);
BOOL  APIENTRY WildcatServerCreateContextFromChallenge(const char *challenge);
DWORD APIENTRY GetWildcatServerContextHandle();
//DWORD APIENTRY GetWildcatServerContextRefCount(); (deprecated)
BOOL  APIENTRY WildcatServerDeleteContext();
///////////////////////////////////////////////////////////////////////////
//! This function sets up a callback for the client application.
//! Channel messages are presented to the client through this
//! callback mechanism.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY SetupWildcatCallback(TWildcatCallback cbproc, DWORD userdata);
BOOL  APIENTRY RemoveWildcatCallback();
///////////////////////////////////////////////////////////////////////////
//! This function is used to grant another thread in the same application
//! equivalent access as the thread that calls this function.  It causes the
//! other thread to refer to the same server context.  This is a lightweight
//! version of WildcatServerCreateContextFromHandle.  One difference is that
//! since this function does not create a new client context,
//! WildcatServerDeleteContext must only be called once for this context,
//! even though there may be more than one thread accessing it.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GrantThreadAccess(DWORD tid);
///////////////////////////////////////////////////////////////////////////
//! These two functions allow you to more directly manipulate the Wildcat
//! server context associated with the current thread.  Like
//! GrantThreadAccess, the Wildcat server is only aware of one instance of
//! the context, so WildcatServerDeleteContext must only be called once per
//! server context.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetWildcatThreadContext();
BOOL  APIENTRY SetWildcatThreadContext(DWORD context);
///////////////////////////////////////////////////////////////////////////
//! Returns the current node number, or 0 if no node number has been
//! allocated.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetNode();
///////////////////////////////////////////////////////////////////////////
//! Set the current node status (nsDown, nsUp, nsSigningOn, nsLoggedIn).
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY SetNodeStatus(DWORD nodestatus);
///////////////////////////////////////////////////////////////////////////
//! Set the node down status (ndNone, ndRefuseLogin, ndDown).
///////////////////////////////////////////////////////////////////////////

//BOOL  APIENTRY SetNodeStatusDown(DWORD node, DWORD downstatus); (deprecated, see SetPortState)

///////////////////////////////////////////////////////////////////////////
//! Get the TMakewild global configuration record.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetMakewild(TMakewild &mw);
BOOL  APIENTRY GetComputerConfig(TComputerConfig &cc);
///////////////////////////////////////////////////////////////////////////
//! Get the challenge string used for MD5 password authentication.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetChallengeString(char *buf, DWORD bufsize);
///////////////////////////////////////////////////////////////////////////
//! Log in to the Wildcat server as the 'system'.  This gives unrestricted
//! access to all aspects of the server.  The computer from which this
//! function is called must have been set up with the Wildcat System
//! password, if any.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY LoginSystem();
///////////////////////////////////////////////////////////////////////////
//! Look up a user account by name, and return basic account information.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY LookupName(const char *name, TUserInfo &uinfo);
///////////////////////////////////////////////////////////////////////////
//! Allocate a node for a particular call type.  If a specific node is
//! required, pass it in the 'node' parameter, otherwise pass zero.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY AllocateNode(DWORD node, DWORD calltype, const char *speed);
///////////////////////////////////////////////////////////////////////////
//! Log in to the userver under a user account.  All further access to the
//! server is checked based on the access profile(s) of the user.  The
//! password can either be plaintext or an MD5 digest string.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY LoginUser(DWORD userid, const char *password, TUser &user);
BOOL  APIENTRY LoginUserEx(DWORD userid, const char *password, DWORD calltype, const char *speed, TUser &user);
BOOL  APIENTRY LoginRadiusUser(DWORD userid, BYTE chapid, const BYTE *challenge, DWORD challengesize, const BYTE *challresponse, TUser &user);
///////////////////////////////////////////////////////////////////////////
//! Log out of the server.  This is called no matter whether you log in to
//! the server using LoginSystem or LoginUser.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY LogoutUser();
///////////////////////////////////////////////////////////////////////////
//! Checks to see whether the current context is logged in or not.  Returns
//! the user record if it is logged in as a user.  See clSessionXXXX
//! constants
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY WildcatLoggedIn(TUser *user);
///////////////////////////////////////////////////////////////////////////
//! Gets the number of users currently online.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetUsersOnline();
///////////////////////////////////////////////////////////////////////////
//! Get the object flags for a particular access profile.  This may be
//! called before a user is logged in.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetProfileObjectFlags(const char *profile, DWORD objectid);
///////////////////////////////////////////////////////////////////////////
//! The Wildcat server file API functions are modeled after the Win32 file
//! API functions.  See the Win32 API documentation for details regarding
//! these functions. See WCPATHS.DOC for information regarding the format of
//! the path names that may be used with these functions.
///////////////////////////////////////////////////////////////////////////

BOOL     APIENTRY WcCloseHandle(WCHANDLE h);
BOOL     APIENTRY WcCreateDirectory(const char * dir);
BOOL     APIENTRY WcRemoveDirectory(const char * dir);  // 450.3
WCHANDLE APIENTRY WcCreateFile(const char * fn, DWORD access, DWORD sharemode, DWORD create);
BOOL     APIENTRY WcDeleteFile(const char * fn);
BOOL     APIENTRY WcExistFile(const char * fn);
WCHANDLE APIENTRY WcFindFirstFile(const char * fn, WIN32_FIND_DATAA *fd);
BOOL     APIENTRY WcFindNextFile(WCHANDLE ff, WIN32_FIND_DATAA *fd);
BOOL     APIENTRY WcFindClose(WCHANDLE ff);
DWORD    APIENTRY WcGetFileSize(WCHANDLE h);
BOOL     APIENTRY WcGetFileTime(WCHANDLE h, FILETIME &ft);
BOOL     APIENTRY WcGetFileTimeByName(const char * fn, FILETIME &ft);
BOOL     APIENTRY WcMoveFile(const char * src, const char * dest);
BOOL     APIENTRY WcReadFile(WCHANDLE h, LPVOID buffer, DWORD requested, LPDWORD read);
BOOL     APIENTRY WcReadLine(WCHANDLE h, LPVOID buffer, DWORD buflen);
BOOL     APIENTRY WcSetEndOfFile(WCHANDLE h);
DWORD    APIENTRY WcSetFilePointer(WCHANDLE h, LONG dist, DWORD movemethod);
BOOL     APIENTRY WcSetFileTime(WCHANDLE h, FILETIME &ft);
BOOL     APIENTRY WcWriteFile(WCHANDLE h, LPCVOID buffer, DWORD requested, LPDWORD written);
BOOL     APIENTRY WcRenameFile(const char * from, const char * toname); // 450.3
// 451.8h 07/17/06 07:26 pm
// Internal usage only
BOOL     APIENTRY WcResolvePathName(const char *wfname, DWORD &access, DWORD &share, DWORD &create, char *dest, const DWORD destsize);
//

///////////////////////////////////////////////////////////////////////////
//! Get the connection Id for the current context.  Connection Ids are
//! unique and can reasonably be assumed not to repeat during the time the
//! server is up.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetConnectionId();
///////////////////////////////////////////////////////////////////////////
//! Get the total number of calls made to the system (not server API calls,
//! user calls). The 'increment' parameter determines whether or not the
//! count is increased by one before returning the result.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetTotalCalls(BOOL increment);
///////////////////////////////////////////////////////////////////////////
//! This function combines a WcCreateFile, WcReadFile, and WcCloseHandle
//! into one operation.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetText(const char *fn, char *buf, DWORD bufsize, DWORD &retsize);