wcserver/vb/modules/wcserver.bas

Attribute VB_Name = "wcserver" 

'------------------------------------------------------------------------
'Visual Basic Wildcat! SDK API v6.1.451.9
'(c) copyright 1998-2006 by Santronics Software Inc.. All Rights Reserved.
'
'Automatically generated from wcserver.h by CPP2BAS
'------------------------------------------------------------------------

'//! Group: Client SDK Functions

'//! The functions to get the Wildcat version and build can be called before
'//! WildcatServerConnect.

Declare Function GetWildcatVersion Lib "wcsrv2.dll" () As Long
Declare Function GetWildcatBuild Lib "wcsrv2.dll" () As Long

'//! 449.5 04/30/01
'//! The functions to get the Wildcat version and build at the server and
'//! can only be called after a context is created

Declare Function WcGetServerVersion Lib "wcsrv2.dll" () As Long
Declare Function WcGetServerBuild Lib "wcsrv2.dll" () As Long

'//! WildcatServerConnect should be called once per application to connect to
'//! the Wildcat server.  The window handle is used as the parent window when
'//! the server connect dialog box is displayed.  If there is no convenient
'//! window handle available, pass NULL.  Console mode applications should
'//! also pass NULL.  WildcatServerConnectSpecific can be called if you know
'//! the machine name of the server you would like to connect to.
'//! WildcatServerDialog allows the user to pick a server from a dialog box.
'//!
'//! WildcatServerConnectLocal() was added in v5.7 to support connections
'//! only to the local computer. Performs no broadcasting.

Declare Function WildcatServerConnect Lib "wcvb.dll" Alias "vbWildcatServerConnect" (ByVal parent As Long) As Boolean
Declare Function WildcatServerConnectSpecific Lib "wcvb.dll" Alias "vbWildcatServerConnectSpecific" (ByVal parent As Long, ByVal computername As String) As Boolean
Declare Function WildcatServerConnectLocal Lib "wcsrv2.dll" (ByVal parent As Long) As Boolean
Declare Function WildcatServerDialog Lib "wcsrv2.dll" (ByVal parent As Long, ByVal computername As String, ByVal namesize As Long) As Boolean
Declare Function SetWildcatErrorMode Lib "wcsrv2.dll" (ByVal verbose As Long) As Boolean
Declare Function WildcatServerShutdown Lib "wcsrv2.dll" (ByVal pwd As String, ByVal force As Long) As Boolean

'//! GetConnectedServer retrieves the computer name of the connected server

Declare Function GetConnectedServer Lib "wcvb.dll" Alias "vbGetConnectedServer" () As String

'//! These functions start and stop a thread-specific context for this client
'//! on the server.  Even if an application only has one thread, the
'//! WildcatServerCreateContext function must be called before any other
'//! functions will work.
'//!
'//! WildcatServerCreateContextFromHandle creates a new client context that
'//! refers to an existing context on the server.  The handle is generally
'//! retrieved using GetWildcatServerContextHandle in one application, and
'//! passed to WildcatServerCreateContextFromHandle in another application.

Declare Function WildcatServerCreateContext Lib "wcsrv2.dll" () As Boolean
Declare Function WildcatServerCreateContextFromHandle Lib "wcsrv2.dll" (ByVal context As Long) As Boolean
Declare Function WildcatServerCreateContextFromChallenge Lib "wcsrv2.dll" (ByVal challenge As String) As Boolean
Declare Function GetWildcatServerContextHandle Lib "wcsrv2.dll" () As Long
Declare Function WildcatServerDeleteContext Lib "wcsrv2.dll" () As Boolean

'//! This function sets up a callback for the client application.
'//! Channel messages are presented to the client through this
'//! callback mechanism.

Declare Function SetupWildcatCallback Lib "wcsrv2.dll" (ByVal cbproc As Long, ByVal userdata As Long) As Boolean
Declare Function RemoveWildcatCallback Lib "wcsrv2.dll" () As Boolean

'//! This function is used to grant another thread in the same application
'//! equivalent access as the thread that calls this function.  It causes the
'//! other thread to refer to the same server context.  This is a lightweight
'//! version of WildcatServerCreateContextFromHandle.  One difference is that
'//! since this function does not create a new client context,
'//! WildcatServerDeleteContext must only be called once for this context,
'//! even though there may be more than one thread accessing it.

Declare Function GrantThreadAccess Lib "wcsrv2.dll" (ByVal tid As Long) As Boolean

'//! These two functions allow you to more directly manipulate the Wildcat
'//! server context associated with the current thread.  Like
'//! GrantThreadAccess, the Wildcat server is only aware of one instance of
'//! the context, so WildcatServerDeleteContext must only be called once per
'//! server context.

Declare Function GetWildcatThreadContext Lib "wcsrv2.dll" () As Long
Declare Function SetWildcatThreadContext Lib "wcsrv2.dll" (ByVal context As Long) As Boolean

'//! Returns the current node number, or 0 if no node number has been
'//! allocated.

Declare Function GetNode Lib "wcsrv2.dll" () As Long

'//! Set the current node status (nsDown, nsUp, nsSigningOn, nsLoggedIn).

Declare Function SetNodeStatus Lib "wcsrv2.dll" (ByVal nodestatus As Long) As Boolean

'//! Set the node down status (ndNone, ndRefuseLogin, ndDown).

'//! Get the TMakewild global configuration record.

Declare Function GetMakewild Lib "wcvb.dll" Alias "vbGetMakewild" (mw As TMakewild) As Boolean
Declare Function GetComputerConfig Lib "wcvb.dll" Alias "vbGetComputerConfig" (cc As TComputerConfig) As Boolean

'//! Get the challenge string used for MD5 password authentication.

Declare Function GetChallengeString Lib "wcvb.dll" Alias "vbGetChallengeString" () As String

'//! Log in to the Wildcat server as the 'system'.  This gives unrestricted
'//! access to all aspects of the server.  The computer from which this
'//! function is called must have been set up with the Wildcat System
'//! password, if any.

Declare Function LoginSystem Lib "wcsrv2.dll" () As Boolean

'//! Look up a user account by name, and return basic account information.

Declare Function LookupName Lib "wcvb.dll" Alias "vbLookupName" (ByVal name As String, uinfo As TUserInfo) As Boolean

'//! Allocate a node for a particular call type.  If a specific node is
'//! required, pass it in the 'node' parameter, otherwise pass zero.

Declare Function AllocateNode Lib "wcsrv2.dll" (ByVal node As Long, ByVal calltype As Long, ByVal speed As String) As Boolean

'//! Log in to the userver under a user account.  All further access to the
'//! server is checked based on the access profile(s) of the user.  The
'//! password can either be plaintext or an MD5 digest string.

Declare Function LoginUser Lib "wcvb.dll" Alias "vbLoginUser" (ByVal userid As Long, ByVal password As String, user As TUser) As Boolean
Declare Function LoginUserEx Lib "wcvb.dll" Alias "vbLoginUserEx" (ByVal userid As Long, ByVal password As String, ByVal calltype As Long, ByVal speed As String, user As TUser) As Boolean
Declare Function LoginRadiusUser Lib "wcvb.dll" Alias "vbLoginRadiusUser" (ByVal userid As Long, ByVal chapid As Byte, challenge As Byte, ByVal challengesize As Long, challresponse As Byte, user As TUser) As Boolean

'//! Log out of the server.  This is called no matter whether you log in to
'//! the server using LoginSystem or LoginUser.

Declare Function LogoutUser Lib "wcsrv2.dll" () As Boolean

'//! Checks to see whether the current context is logged in or not.  Returns
'//! the user record if it is logged in as a user.  See clSessionXXXX
'//! constants

Declare Function WildcatLoggedIn Lib "wcvb.dll" Alias "vbWildcatLoggedIn" (user As TUser) As Long

'//! Gets the number of users currently online.

Declare Function GetUsersOnline Lib "wcsrv2.dll" () As Long

'//! Get the object flags for a particular access profile.  This may be
'//! called before a user is logged in.

Declare Function GetProfileObjectFlags Lib "wcsrv2.dll" (ByVal profile As String, ByVal objectid As Long) As Long

'//! The Wildcat server file API functions are modeled after the Win32 file
'//! API functions.  See the Win32 API documentation for details regarding
'//! these functions. See WCPATHS.DOC for information regarding the format of
'//! the path names that may be used with these functions.

Declare Function WcCloseHandle Lib "wcsrv2.dll" (ByVal h As Long) As Boolean
Declare Function WcCreateDirectory Lib "wcsrv2.dll" (ByVal dir As String) As Boolean
Declare Function WcRemoveDirectory Lib "wcsrv2.dll" (ByVal dir As String) As Boolean
Declare Function WcCreateFile Lib "wcsrv2.dll" (ByVal fn As String, ByVal access As Long, ByVal sharemode As Long, ByVal create As Long) As Long
Declare Function WcDeleteFile Lib "wcsrv2.dll" (ByVal fn As String) As Boolean
Declare Function WcExistFile Lib "wcsrv2.dll" (ByVal fn As String) As Boolean
Declare Function WcFindFirstFile Lib "wcvb.dll" Alias "vbWcFindFirstFile" (ByVal fn As String, fd As WIN32_FIND_DATA) As Long
Declare Function WcFindNextFile Lib "wcvb.dll" Alias "vbWcFindNextFile" (ByVal ff As Long, fd As WIN32_FIND_DATA) As Boolean
Declare Function WcFindClose Lib "wcsrv2.dll" (ByVal ff As Long) As Boolean
Declare Function WcGetFileSize Lib "wcsrv2.dll" (ByVal h As Long) As Long
Declare Function WcGetFileTime Lib "wcsrv2.dll" (ByVal h As Long, ft As FILETIME) As Boolean
Declare Function WcGetFileTimeByName Lib "wcsrv2.dll" (ByVal fn As String, ft As FILETIME) As Boolean
Declare Function WcMoveFile Lib "wcsrv2.dll" (ByVal src As String, ByVal dest As String) As Boolean
Declare Function WcReadFile Lib "wcsrv2.dll" (ByVal h As Long, buffer As Any, ByVal requested As Long, read As Long) As Boolean
Declare Function WcReadLine Lib "wcsrv2.dll" (ByVal h As Long, buffer As Any, ByVal buflen As Long) As Boolean
Declare Function WcSetEndOfFile Lib "wcsrv2.dll" (ByVal h As Long) As Boolean
Declare Function WcSetFilePointer Lib "wcsrv2.dll" (ByVal h As Long, ByVal dist As LONG, ByVal movemethod As Long) As Long
Declare Function WcSetFileTime Lib "wcsrv2.dll" (ByVal h As Long, ft As FILETIME) As Boolean
Declare Function WcWriteFile Lib "wcsrv2.dll" (ByVal h As Long, buffer As Any, ByVal requested As Long, written As Long) As Boolean
Declare Function WcRenameFile Lib "wcsrv2.dll" (ByVal from As String, ByVal toname As String) As Boolean

Declare Function WcResolvePathName Lib "wcsrv2.dll" (ByVal wfname As String, access As Long, share As Long, create As Long, ByVal dest As String, ByVal destsize As Long) As Boolean

'//! Get the connection Id for the current context.  Connection Ids are
'//! unique and can reasonably be assumed not to repeat during the time the
'//! server is up.

Declare Function GetConnectionId Lib "wcsrv2.dll" () As Long

'//! Get the total number of calls made to the system (not server API calls,
'//! user calls). The 'increment' parameter determines whether or not the
'//! count is increased by one before returning the result.

Declare Function GetTotalCalls Lib "wcsrv2.dll" (ByVal increment As Long) As Long

'//! This function combines a WcCreateFile, WcReadFile, and WcCloseHandle
'//! into one operation.

Declare Function GetText Lib "wcvb.dll" Alias "vbGetText" (byval fn As String) As String

'//! The following functions access the security data in the Wildcat server.
'//! Each 'securable' object (conference, file area, door, etc) has a unique
'//! Object Id stored with it.  Access profiles are tables of Object Ids and
'//! access flags. When a user logs in, a composite access table consisting
'//! of the logical OR of all the flags in the user' access profiles is
'//! created.  These functions access the information in that composite
'//! array.
'//!
'//! Object flags are often simply zero or one to indicate no access or allow
'//! access, but the individual bits may mean different things such as
'//! Join/Read/Write/Sysop access in a conference area.
